Actualización de items

--- a/assets/css/users/user-profile.css
+++ b/assets/css/users/user-profile.css
@@ -132,7 +132,7 @@
     margin-bottom: 31px; }
     .skills .widget-content-area .progress .progress-bar {
       background-color: #4361ee;
-      background: linear-gradient(to right, #2b5876 0%, #4e4376 100%);
+      background:linear-gradient(to right, #3cba92 0%, #0ba360 100%);;
       border-radius: 1rem;
       font-size: 12px;
       letter-spacing: 1px;
