Actualización de items 4,avatar

--- a/assets/css/elements/avatar.css
+++ b/assets/css/elements/avatar.css
@@ -31,7 +31,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: #506690;
+  background-color: #0ba360;
   color: #fff; }
 
 .avatar--group .avatar-xl {
