--- a/assets/css/elements/avatar.css
+++ b/assets/css/elements/avatar.css
@@ -17,11 +17,13 @@
 
 .avatar--group {
   display: inline-flex;
-  margin-right: 15px; }
+  margin-right: 5px; }
 
 .avatar img {
-  width: 100%;
-  height: 100%;
+  width: 30%;
+  
+  border-radius: 30%;
+  height: 30%;
   -o-object-fit: cover;
   object-fit: cover; }
 
@@ -42,7 +44,7 @@
   margin-left: -.75rem; }
 
 .avatar--group img, .avatar--group .avatar .avatar-title {
-  border: 2px solid #888ea8; }
+  border: 1px solid #888ea8; }
 
 .avatar-xl {
   width: 5.125rem;
@@ -55,8 +57,8 @@
   font-size: 1.33333rem; }
 
 .avatar-sm {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 1.5rem;
+  height:2.5rem;
   font-size: .83333rem; }
 
 /*
